Updated getQ3PercentageVsTeammate + QualifyingDao